Changelog
=========

7.2-dev - (unreleased)
----------------------

7.1 - (2014-03-10)
------------------
* Change: updated wording of the archive options presented within the archive
  dialog
  [ichimdav refs #18470]
* Change: archive operation now accepts an optional archive_date parameter which
  can be used as the archive date instead of the date when the archive operation
  was called
  [ichimdav refs #18740]
* Upgrade step: from Plone root:
   - run /@@archive_previous_versions if you want to archive only the previous
     versions
   - run /@@archive_previous_versions?alsoChildren=True if you want to archive
     also the children of the previous versions
   - [ichimdav refs #18740]
* Feature: added @@archive_previous_versions BrowserView which will archive
  previous versions of archived objects if the versions aren't already archived
  [ichimdav refs #18740]
* Feature: archive dialog now gives option to archive also previous
  versions of given context
  [ichimdav refs #18740]
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.workflow
  [ichimdav refs #18316]
* Feature: added archive and unarchive content rules which can archive
  or unarchive either the object or the previous version of the object
  for which the action was registered
  [ichim-david refs #18316]

7.0 - (2014-02-03)
------------------
* Change: archive/unarchive operations now trigger a cache purge
  [ichim-david refs #18155]

6.9 - (2014-01-22)
------------------
* Bug fix: EffectiveDate is no longer set to now() on publish
  [ghicaale refs #9110]
* Feature: adding Sphinx-generated documentation in Page Template format
  [batradav refs #9502]

6.8 - (2013-12-10)
------------------
* Bug fix: Add missing dependency to ATVocabularyManager
  [avoinea]
* Change: make archived portal message more visible by
  using attentionMessage icon
  [demarant]
* Change: trying usage of queryAdapter for pylint validation
  [simiamih #17382]