@@ -3,6 +3,9 @@ Changelog
 
 7.2-dev - (unreleased)
 ----------------------
+* Bug fix: archive_previous_versions BrowserView now correctly extends the
+  returning list when calling archive_obj_and_children
+  [ichimdav refs #18470]
 
 7.1 - (2014-03-10)
 ------------------
